<resources>
    <string name="app_name">MyApiTest - Breno Menosso Rigon</string>
    <string name="could_not_obtain_location_permission">Não foi possível obter a permissão para localização</string>
    <string name="unknown_error">Ops, ocorreu um erro</string>
    <string name="vehicle_informations">Informações do Veículo</string>
    <string name="honda_civic">Honda Civic</string>
    <string name="_2020_2020">2020/2020</string>
    <string name="plate_placeholder">plate 1234</string>
    <string name="lat_long_placeholder">20.20 21.21</string>
    <string name="could_not_retrieve_vehicle_data">Não foi possível obter os dados do veículo</string>
    <string name="lat_long_detail">Localização do veículo (latitude e longitude):\n%1$s, %2$s</string>
    <string name="delete">Deletar</string>
    <string name="update">Atualizar</string>
    <string name="logout">Logout</string>
    <string name="could_not_destroy_vehicle">Não foi possível deletar o veículo</string>
    <string name="successfully_deleted_vehicle">Veículo deletado com sucesso</string>
    <string name="model">Modelo</string>
    <string name="year">Ano</string>
    <string name="license">Licença</string>
    <string name="place">Localização</string>
    <string name="fill_empty_fields">Por favor, preencha os campos vazios</string>
    <string name="could_not_update_vehicle">Não foi possível atualizar o veículo</string>
    <string name="successfully_updated_vehicle">Veículo atualizado com sucesso</string>
    <string name="create_new_vehicle">Criar um Novo Veículo</string>
    <string name="successfully_create_vehicle">Veículo Criado com Sucesso</string>
    <string name="brazil_phone_code">+55</string>
    <string name="send_sms">Enviar SMS</string>
    <string name="verify">Verificar</string>
    <string name="login">Login</string>
    <string name="could_not_send_code">Não foi possível enviar o código SMS</string>
    <string name="verification_code_sent">Código de verificação enviado</string>
    <string name="please_enter_phone_number">Por favor, informe o número de telefone</string>
    <string name="coul_not_authenticate">Não foi possível realizar a autenticação</string>
    <string name="cereate_new_vehicle">Criar novo veículo</string>
    <string name="vehicle_details">Detalhes do veículo</string>
    <string name="take_picture">Tirar Foto</string>
    <string name="could_not_obtain_permission">Não foi possível obter a permissão</string>
    <string name="no_picture_selected">Nenhuma foto selecionada!</string>
    <string name="failed_to_upload">Falha ao realizar o upload.</string>
</resources>