<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlPhoneNumber"
        android:layout_width="267dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/brazil_phone_code" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sendSms"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/send_sms"
        app:layout_constraintBottom_toBottomOf="@+id/tlPhoneNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tlPhoneNumber"
        app:layout_constraintTop_toTopOf="@+id/tlPhoneNumber" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlSmsCode"
        android:layout_width="267dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tlPhoneNumber"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etSmsCode"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="hint" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/verify"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/verify"
        app:layout_constraintBottom_toBottomOf="@id/tlSmsCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tlPhoneNumber"
        app:layout_constraintTop_toTopOf="@id/tlSmsCode"
        android:visibility="gone"/>
</androidx.constraintlayout.widget.ConstraintLayout>